[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv-to-map"
version = "0.1.0"
requires-python = ">=3.9.7"
dependencies = [
    "adjusttext>=1.3.0",
    "contextily>=1.6",
    "geopandas>=1.0",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "pyproj>=3.6",
    "shapely>=2.0",
]

[project.scripts]
csv-to-map = "csv_to_map.cli:main"

[dependency-groups]
dev = [
    "marimo>=0.23.6",
]
